Corrected the JSON format and wrapped the role values into allowedRoles value. This affects all the front-end styling of data display and currently the flag checkboxes no longer appear.

--- a/css/app.css
+++ b/css/app.css
@@ -20,7 +20,7 @@ body {
 }
 
 .vspacer {
-    margin-top: 1em;
+    margin-bottom: 1.5em;
 }
 
 .logo-big {
